--- a/index.css
+++ b/index.css
@@ -9,6 +9,15 @@ body{
     max-width: 100vw;
 }
 
+header{
+
+}
+
+main{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .section-title{
     text-align: center;
     margin: 40px;
@@ -116,5 +125,20 @@ img:active{
                 color: #007bff;
             }
         }
+    }
+}
+
+footer {
+    width: 100%;
+    height: 6vh;
+    background-color: #00B2FF;
+
+    .footer-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
     }
 }
