--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+:root{
+    --darkblue: #003772;
+    --blue: #004385;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +16,60 @@ body{
 }
 
 header{
+
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(
+            to bottom right,
+            var(--darkblue),
+            var(--blue)
+    );
+    display: flex;
+    flex-direction: column;
+
+
+    & .nav-bar{
+        height: 10%;
+        width: 100%;
+        background: black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & .logo{
+            width: 25%;
+            height: 100%;
+            background: teal;
+        }
+
+        & .menu{
+            width: 75%;
+            height: 100%;
+            background: yellow;
+        }
+    }
+
+    & .personal-info{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        background: orange;
+
+        & .about-me{
+            width: 60%;
+            height: 100%;
+            background: green;
+        }
+
+        & .profile-picture{
+            width: 40%;
+            height: 100%;
+            background: cadetblue;
+        }
+    }
 
 }
 
@@ -88,6 +147,7 @@ main{
 img{
     width: 15%;
     height: 15%;
+    border-radius: 7%;
     display: block;
     margin: auto;
 }
@@ -99,7 +159,6 @@ img:hover{
 img:active{
     box-shadow: none;
     border: 4px solid blue;
-    border-radius: 7%;
 }
 
 .work-history {
