--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
-:root{
+:root {
     --darkblue: #003772;
     --blue: #004385;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,79 +11,138 @@
     scroll-behavior: smooth;
 }
 
-body{
+body {
     max-width: 100vw;
 }
 
-header{
+h1 {
+    font-size: 3.5rem;
+}
 
+header {
     height: 100vh;
     width: 100%;
     background: linear-gradient(
             to bottom right,
             var(--darkblue),
-            var(--blue)
+            #3f558f
     );
     display: flex;
     flex-direction: column;
 
 
-    & .nav-bar{
+    & .nav-bar {
         height: 10%;
         width: 100%;
-        background: black;
         display: flex;
         align-items: center;
         justify-content: center;
 
-        & .logo{
+        & .logo {
             width: 25%;
             height: 100%;
-            background: teal;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        & .menu{
-            width: 75%;
+        & .menu {
+            width: 100%;
             height: 100%;
-            background: yellow;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding-right: 10%;
         }
     }
 
-    & .personal-info{
+    & .personal-info {
         width: 100%;
-        height: 100%;
+        height: 90%;
+        padding: 0 80px;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        background: orange;
 
-        & .about-me{
-            width: 60%;
-            height: 100%;
-            background: green;
+        & .about-me {
+            width: 50%;
+            height: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 5%;
+
+            & .about-me-name {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+            }
+
+            & .about-me-title {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+
+                & h2 {
+                    font-size: 2rem;
+                }
+            }
+
+            & .about-me-subtitle{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+
+                & h2{
+                    font-size: 1.5rem;
+                }
+            }
         }
 
-        & .profile-picture{
-            width: 40%;
-            height: 100%;
-            background: cadetblue;
+        & .profile-picture {
+            width: 50%;
+            height: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            & img {
+                width: 500px;
+                height: 500px;
+                border-radius: 50%;
+                object-fit: cover;
+                object-position: 60% 40%;
+            }
+
+            & img:hover {
+                box-shadow: 5px 2px 10px 2px rgba(230, 230, 230, 0.67);
+            }
+
+            & img:active {
+                box-shadow: none;
+                border: 4px solid #ffffff;
+            }
         }
     }
 
 }
 
-main{
+main {
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.section-title{
+.section-title {
     text-align: center;
     margin: 40px;
 }
 
-.education{
+.education {
     height: 25vh;
 }
 
@@ -144,23 +203,6 @@ main{
     }
 }
 
-img{
-    width: 15%;
-    height: 15%;
-    border-radius: 7%;
-    display: block;
-    margin: auto;
-}
-
-img:hover{
-    box-shadow: 5px 2px 10px 2px #000;
-}
-
-img:active{
-    box-shadow: none;
-    border: 4px solid blue;
-}
-
 .work-history {
     display: flex;
     flex-direction: row;
@@ -193,7 +235,7 @@ footer {
     height: 6vh;
     background-color: #00B2FF;
 
-    .footer-content{
+    .footer-content {
         display: flex;
         justify-content: space-between;
         align-items: center;
