--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 :root {
-    --darkblue: #003772;
-    --blue: #004385;
+    --beige: #fffbf5;
+    --softorange: #ecac57;
+    --quicksand: "Quicksand";
 }
 
 * {
@@ -13,227 +14,339 @@
 
 body {
     max-width: 100vw;
+    background-color: var(--beige);
+    font-family: var(--quicksand), sans-serif;
 }
 
-h1 {
-    font-size: 3.5rem;
+h2{
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 header {
-    height: 100vh;
+    height: 10vh;
     width: 100%;
-    background: linear-gradient(
-            to bottom right,
-            var(--darkblue),
-            #3f558f
-    );
     display: flex;
     flex-direction: column;
 
-
     & .nav-bar {
-        height: 10%;
+        height: 100%;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
 
-        & .logo {
-            width: 25%;
+        & .nav-left {
             height: 100%;
+            width: 25%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        & .menu {
-            width: 100%;
+        & .nav-middle {
             height: 100%;
+            width: 50%;
             display: flex;
             align-items: center;
-            justify-content: flex-end;
-            padding-right: 10%;
+            justify-content: flex-start;
+            gap: 5%;
+        }
+
+        & .nav-right {
+            height: 100%;
+            width: 25%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .contact-button {
+            text-decoration: none;
+            color: black;
+            padding: 10px;
+            border: 1px solid var(--softorange);
+            border-radius: 30px;
         }
     }
+}
 
-    & .personal-info {
+main {
+    width: 100%;
+    height: auto;
+
+    & .personal-info-top {
         width: 100%;
-        height: 90%;
+        height: 90vh;
         padding: 0 80px;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
 
-        & .about-me {
+        & .personal-info-left {
             width: 50%;
-            height: 90%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 5%;
+            flex-direction: column;
+
+            & img {
+                height: 70%;
+                border-radius: 8%;
+                object-fit: cover;
+            }
+
+            & img:hover {
+                box-shadow: 5px 2px 10px 2px rgba(44, 44, 44, 0.67);
+            }
+
+            & img:active {
+                box-shadow: none;
+                border: 4px solid var(--softorange);
+            }
+        }
+
+        & .personal-info-top-right {
+            width: 50%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
             gap: 5%;
-
-            & .about-me-name {
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-            }
-
-            & .about-me-title {
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-
-                & h2 {
-                    font-size: 2rem;
-                }
-            }
-
-            & .about-me-subtitle{
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-
-                & h2{
-                    font-size: 1.5rem;
-                }
-            }
         }
+    }
 
-        & .profile-picture {
-            width: 50%;
-            height: 90%;
+    & .personal-info-middle{
+        height: 300vh;
+        width: 100%;
+
+        & .skills {
+            width: 100%;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            justify-content: space-evenly;
+            margin-bottom: 25px;
+            flex-wrap: wrap;
 
-            & img {
-                width: 500px;
-                height: 500px;
-                border-radius: 50%;
-                object-fit: cover;
-                object-position: 60% 40%;
+            & .section-title {
+                text-align: center;
             }
 
-            & img:hover {
-                box-shadow: 5px 2px 10px 2px rgba(230, 230, 230, 0.67);
+            & .skills-table {
+                width: 40%;
+                border-collapse: collapse;
+                background-color: #fffcf8;
+                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+                border-radius: 8px;
+                overflow: hidden;
+
+                & thead {
+                    background-color: var(--softorange);
+                    color: #ffffff;
+                    font-size: 1.2rem;
+                }
+
+                & th {
+                    padding: 12px 15px;
+                    text-align: center;
+                }
+
+                & tbody tr {
+                    border-bottom: 1px solid #ddd;
+                }
+
+                & tbody tr:last-child {
+                    border-bottom: none;
+                }
+
+                & td {
+                    padding: 12px 15px;
+                    font-size: 1rem;
+                    color: #333333;
+                }
+
+                & td:first-child {
+                    font-weight: bold;
+                    width: 30%;
+                    color: #000000;
+                }
+
+                & tbody tr:nth-child(even) {
+                    background-color: #fbf3e7;
+                }
+
+                & tbody tr:hover {
+                    background-color: #edca9b;
+                }
+            }
+        }
+
+        & .education {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 25px;
+            margin-top: 100px;
+            flex-wrap: wrap;
+
+            & .section-title {
+                text-align: center;
+                margin-right: 50px;
             }
 
-            & img:active {
-                box-shadow: none;
-                border: 4px solid #ffffff;
+            & .education-timeline {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 80%;
+
+                & .timeline-item {
+                    width: 20%;
+                    height: 25%;
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: white;
+
+                    & .above-timeline {
+                        color: black;
+                        position: relative;
+                        top: -80px;
+                        left: 10px;
+                    }
+
+                    & .below-timeline {
+                        color: black;
+                        position: relative;
+                        top: 70px;
+                        left: 10px;
+                    }
+
+                    & p {
+                        color: white;
+                        position: absolute;
+                        top: 0;
+                    }
+                }
+
+                & .first {
+                    background-color: blue;
+                }
+
+                & .first::before {
+                    content: "";
+                    position: absolute;
+                    top: -80px;
+                    left: 0;
+                    height: 80px;
+                    border-left: 2px solid black;
+                }
+
+                & .second {
+                    background-color: red;
+                }
+
+                & .second::before {
+                    content: "";
+                    position: absolute;
+                    top: 19px;
+                    left: 0;
+                    height: 70px;
+                    border-left: 2px solid black;
+                }
+
+                & .third {
+                    background-color: orange;
+                }
+
+                & .third::before {
+                    content: "";
+                    position: absolute;
+                    top: -80px;
+                    left: 0;
+                    height: 80px;
+                    border-left: 2px solid black;
+                }
+
+                & .fourth {
+                    background-color: green;
+                }
+
+                & .fourth::before {
+                    content: "";
+                    position: absolute;
+                    top: 19px;
+                    left: 0;
+                    height: 70px;
+                    border-left: 2px solid black;
+                }
+            }
+        }
+
+        & .experience {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 25px;
+            margin-top: 100px;
+            flex-wrap: wrap;
+
+            & .section-title {
+                text-align: center;
+                margin-right: 50px;
+            }
+
+            & .experience-list{
+                width: 80%;
+            }
+        }
+
+        & .work-history {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            width: 100%;
+
+            & ul {
+                list-style-type: circle;
+
+                & ul {
+                    list-style-type: none;
+
+                    & .job-skill {
+                        display: block;
+                        font-weight: bold;
+                        text-decoration: underline;
+                        color: #333;
+                        transition: color 0.5s ease-in-out;
+                    }
+
+                    & .job-skill:hover {
+                        color: #007bff;
+                    }
+                }
             }
         }
     }
-
 }
 
-main {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 
-.section-title {
-    text-align: center;
-    margin: 40px;
-}
 
-.education {
-    height: 25vh;
-}
 
-.skills {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-bottom: 25px;
-    flex-wrap: wrap;
-
-    .skills-table {
-        width: 40%;
-        border-collapse: collapse;
-        background-color: #ffffff;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        overflow: hidden;
-
-        & thead {
-            background-color: #00B2FF;
-            color: #ffffff;
-            font-size: 1.2rem;
-        }
-
-        & th {
-            padding: 12px 15px;
-            text-align: center;
-        }
-
-        & tbody tr {
-            border-bottom: 1px solid #ddd;
-        }
-
-        & tbody tr:last-child {
-            border-bottom: none;
-        }
-
-        & td {
-            padding: 12px 15px;
-            font-size: 1rem;
-            color: #333333;
-        }
-
-        & td:first-child {
-            font-weight: bold;
-            width: 30%;
-            color: #000000;
-        }
-
-        & tbody tr:nth-child(even) {
-            background-color: #d9d9d9;
-        }
-
-        & tbody tr:hover {
-            background-color: #f1f1f1;
-        }
-    }
-}
-
-.work-history {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-
-    & ul {
-        list-style-type: circle;
-
-        & ul {
-            list-style-type: none;
-
-            & .job-skill {
-                display: block;
-                font-weight: bold;
-                text-decoration: underline;
-                color: #333;
-                transition: color 0.5s ease-in-out;
-            }
-
-            & .job-skill:hover {
-                color: #007bff;
-            }
-        }
-    }
-}
 
 footer {
     width: 100%;
     height: 6vh;
-    background-color: #00B2FF;
+    background-color: var(--softorange);
 
     .footer-content {
         display: flex;
