--- a/index.css
+++ b/index.css
@@ -1,8 +1,15 @@
 :root {
+    /*Colors*/
+
+    /*Background*/
     --beige: #fffbf5;
-    --softorange: #ecac57;
+
+    /*Accent colors*/
+    --carolinablue: #7cb6e2;
     --darkorange: #dc8718;
     --hoverorange: #edca9b;
+
+    /*Fonts*/
     --quicksand: "Quicksand";
 }
 
@@ -60,6 +67,14 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
+
+            & a{
+                text-decoration: none;
+                color: black;
+                display: block;
+                position: relative;
+                padding: 4px 0;
+            }
         }
 
         & .nav-middle {
@@ -69,6 +84,45 @@ header {
             align-items: center;
             justify-content: flex-start;
             gap: 5%;
+            position: relative;
+
+            & ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                text-align: center;
+
+                & li {
+                    display: inline-block;
+                    margin: 0 15px;
+
+                    & a {
+                        text-decoration: none;
+                        color: black;
+                        display: block;
+                        position: relative;
+                        padding: 4px 0;
+                    }
+
+                    & a::before{
+                        content: "";
+                        width: 100%;
+                        height: 4px;
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        background: #efa23a;
+                        transition: 0.5s transform ease;
+                        transform: scale3d(0,1,1);
+                        transform-origin: 0 50%;
+                    }
+
+                    & a:hover::before {
+                        transform: scale3d(1, 1, 1);
+                        transform-origin: 0% 50%;
+                    }
+                }
+            }
         }
 
         & .nav-right {
@@ -79,16 +133,11 @@ header {
             justify-content: center;
         }
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .contact-button {
+        & .contact-button {
             text-decoration: none;
             color: black;
             padding: 10px;
-            border: 1px solid var(--softorange);
+            border: 1px solid var(--carolinablue);
             border-radius: 30px;
         }
     }
@@ -127,7 +176,7 @@ main {
 
             & img:active {
                 box-shadow: none;
-                border: 4px solid var(--softorange);
+                border: 4px solid var(--carolinablue);
             }
         }
 
@@ -166,7 +215,7 @@ main {
                 overflow: hidden;
 
                 & thead {
-                    background-color: var(--softorange);
+                    background-color: var(--carolinablue);
                     color: #ffffff;
                     font-size: 1.2rem;
                 }
@@ -342,7 +391,7 @@ main {
                         }
 
                         & .job-skill:hover {
-                            color: var(--softorange);
+                            color: var(--carolinablue);
                         }
                     }
                 }
@@ -363,7 +412,7 @@ main {
 
             & .form-div {
                 width: 80%;
-                height: 50vh;
+                height: auto;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -400,7 +449,7 @@ main {
                     }
 
                     & button {
-                        background-color: var(--softorange);
+                        background-color: var(--carolinablue);
                         color: white;
                         border: none;
                         cursor: pointer;
@@ -429,7 +478,7 @@ main {
 
 footer {
     width: 100%;
-    background-color: var(--softorange);
+    background-color: var(--carolinablue);
 
     .footer-content {
         display: flex;
@@ -443,8 +492,9 @@ footer {
 
 @media screen and (max-width: 480px) {
     main {
-        & .personal-info-top{
+        & .personal-info-top {
             flex-direction: column;
         }
     }
 }
+
