--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ header {
 
                     & a:hover::before {
                         transform: scale3d(1, 1, 1);
-                        transform-origin: 0% 50%;
+                        transform-origin: 0 50%;
                     }
                 }
             }
