--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 :root {
     /*Colors*/
-
     /*Background*/
     --beige: #fffbf5;
 
@@ -11,14 +10,19 @@
 
     /*Fonts*/
     --quicksand: "Quicksand";
+
+    /*Font size*/
+    font-size: 16px;
+
+    /*scroll-behavior*/
+    scroll-behavior: smooth;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 16px;
-    scroll-behavior: smooth;
+
 }
 
 body {
